tests/snapshots/text_search__text_search_both_inputs.snap
---
source: tests/text_search.rs
expression: result
---
                                                                                
╭[0] Search────────────────────────────────────────────╮                        
│authentication                                        │                        
╰──────────────────────────────────────────────────────╯                        
╭Search Labels────────────────────────╮╭───────────────╮                        
│security;bug                         ││             ▼ │                        
╰─────────────────────────────────────╯╰───────────────╯
