tests/snapshots/text_search__text_search_label_input.snap
---
source: tests/text_search.rs
expression: result
---
                                                                                
╭[0] Search─────────────────────────────────────────╮                           
│                                                   │                           
╰───────────────────────────────────────────────────╯                           
╭Search Labels──────────────────────╮╭──────────────╮                           
│priority:high                      ││            ▼ │                           
╰───────────────────────────────────╯╰──────────────╯
