tests/snapshots/text_search__text_search_loaded_state.snap
---
source: tests/text_search.rs
expression: result
---
                                                                                
╭[0] Search────────────────────────────────────────────╮                        
│                                                      │                        
╰──────────────────────────────────────────────────────╯                        
╭Search Labels────────────────────────╮╭───────────────╮                        
│                                     ││             ▼ │                        
╰─────────────────────────────────────╯╰───────────────╯
