tests/snapshots/text_search__text_search_with_input.snap
---
source: tests/text_search.rs
expression: result
---
                                                                                
╭[0] Search─────────────────────────────────────────╮                           
│bug fix                                            │                           
╰───────────────────────────────────────────────────╯                           
╭Search Labels──────────────────────╮╭──────────────╮                           
│                                   ││            ▼ │                           
╰───────────────────────────────────╯╰──────────────╯
